--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -3,6 +3,11 @@
  *   All rights reserved.
  */
 
+ html {
+    font-size: 16px;
+    box-sizing: border-box;
+ }
+
  /* Header settings */
  header {
     background-color: white;
@@ -130,19 +135,23 @@ main {
 /* Information left panel */
 .left-main {
     display: flex-inline;
-    max-width: 60%;
     background-color: white;
     align-items: center;
     justify-items: left;
+    margin-top: 1rem;
+}
+
+.left-item-width {
+    max-width: 60%;  
 }
 
 .left-image {
     float: left;
-    margin: 2rem 1.5rem;
+    margin: 0;
 }
 
 .left-image img {
-    /* Made image resizable */
+    /* Made image resizable using % */
     width: 100%;
     height: auto;
 }
@@ -151,7 +160,9 @@ main {
     float:right;
     align-items: center;
     justify-items: left;
+    margin-top: 0;
     margin-left: 1.5rem;
+    min-height: 180px;
 }
 
 /* Information right panel */
@@ -176,8 +187,10 @@ main {
 }
 
 .info-image img {
-    /* Made image resizable */
-    width: 100%;
+    /* Made image resizable by using a % or 
+    fixed to keep multiple photos the same size */
+    width: 120px;
+    /* width: 100%; */
     height: auto;
 }
 
@@ -194,4 +207,39 @@ main {
     align-items: center;
     justify-items: left;
     margin: 2rem 1.5rem;
+}
+
+/* Courses section */
+
+#courses {
+    background-color: lightgrey;
+    display: flex;
+    align-items: center;
+    min-height: auto;
+    justify-content: space-around;
+    align-content:space-between;
+    flex-wrap: wrap;
+}
+
+.courses-item-width {
+    /* Setting a fixed width of 300px with
+    the container display as flex and wrap
+    a row (or more) of images will create 
+    a variable (with resizing) number of 
+    images in a row. If a % (say 30%) the
+    row of images will simply expand and contract
+    with the resizing */
+    width:300px;
+    /* width: 30%; */
+}
+
+#courses-section {
+    background-color: lightgrey;
+    padding: 2rem;
+}
+
+#courses-section h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
 }
